2000-04-10  Dan Winship  <danw@helixcode.com>

	* gnome-pilot.m4 (PILOT_LIBS): Fix a bug introduced in the
	gnome-pilot-config to "gnome-config gpilot" change that caused not
	having pilot-link installed to become a fatal error.

2000-02-26  James Henstridge  <james@daa.com.au>

	* gnome-gettext.m4: fix up check of LINGUAS variable so that we don't
	get problems when LINGUAS contains `en' and ALL_LINGUAS contains
	`en_GB' for instance.

2000-02-22  Martin Baulig  <martin@home-of-linux.org>

	* autogen.sh: Don't run libtoolize when `NO_LIBTOOLIZE' is set.

2000-02-09  Raja R Harinath  <harinath@cs.umn.edu>

	* autogen.sh: Fix GNUism introduced in the previous fix.

2000-02-08  Miguel de Icaza  <miguel@gnu.org>

	* autogen.sh: Handle non GNU find programs. 

2000-02-05  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-types.m4 (AC_LIBGTOP_CHECK_TYPE): New macro. This
	is an improved version of AC_CHECK_TYPE which takes into account
	that we need to #include some other header files on some systems
	to get some types.
	(GNOME_LIBGTOP_TYPES): Check for <sys/bitypes.h> for Tru64 and
	use AC_LIBGTOP_CHECK_TYPE rather than AC_CHECK_TYPE.

2000-01-26  Dave Camp  <campd@oit.edu>
	
	* gnome-bonobo-check.m4 Include <bonobo.h> rather than 
	<bonobo/gnome-object.h>

2000-01-26  Dave Camp  <campd@oit.edu>

	* gnome-bonobo-check.m4: Check for bonobo_object_get_type() rather 
	than gnome_object_get_type().

2000-01-23  Peter Teichman  <peter@helixcode.com>

	* gnome-pilot.m4: i broke the version-checking macro for other
	distribs in my last commit. fixing that now.

2000-01-22  Peter Teichman  <peter@helixcode.com>

	* gnome-pilot.m4 (PILOT_LIBS): fix the version-checking macro for
	debian

2000-01-20  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-objc-checks.m4: Look for sched_yield in -lrt, too.
	Suggested by Drazen Kazar <dave@srce.hr>.

2000-01-16  Vadim Strizhevsky  <vadim@optonline.net>

	* gnome-pilot.m4: Fix typo in PILOT_LINK_HOOK.
